--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,11 @@ spring:
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    properties:
+      max.poll.interval.ms: 2000
+
+logging:
+  level:
+    root: INFO
+    org.springframework.kafka: DEBUG
+    org.apache.kafka.clients.consumer.internals: DEBUG
