--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     properties:
       max.poll.interval.ms: 2000
+      max.poll.records: 1
 
 logging:
   level:
