--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,3 +11,4 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     properties:
       max.poll.interval.ms: 2000
+      max.poll.records: 1
